--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
@@ -80,5 +81,18 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
-  }
+  },
+  "description": "**URL**: https://lovable.dev/projects/63a4d724-c94f-4ac3-9970-114314bce76f",
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/norahkibathi/lovable-ai-estate-portal.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/norahkibathi/lovable-ai-estate-portal/issues"
+  },
+  "homepage": "https://github.com/norahkibathi/lovable-ai-estate-portal#readme"
 }
